    - Now allows SI prefixes to be localised
  Bugfixes:
    - Fixed how the mod detects which machines can produce certain recipes in the proper way
    - Fixed that setting hard limits on rocket silo recipes would not work correctly
    - Fixed that migration caused any subfactory that contained fuels to always need repair

---------------------------------------------------------------------------------------------------
Version: 0.18.15
Date: 20. 05. 2020
  Bugfixes:
    - Fixed a bug where the recipe picker didn't show the appropriate recipes in some cases
    - Fixed that adding recipes which used hidden items would crash
    - Fixed that a recipe would sometimes show as being able to use fluids as ingredients/products, while actually not being able to do so
    - Fixed a crash when alt-tabbing or changing resolution while a popup dialog was open
    - (Probably) fixed a crash when the space science-item is being removed by another mod

---------------------------------------------------------------------------------------------------
Version: 0.18.14
Date: 16. 05. 2020
  Bugfixes:
    - Fixed that the game could be paused unexpectedly
    - Fixed a crash when selecting a product from the item picker
    - Fixed a crash when opening certain dialogs

---------------------------------------------------------------------------------------------------
Version: 0.18.13
Date: 16. 05. 2020
  Features:
    - You can now alt-click the machine of any recipe to reset it to default, removing any configured limits
  Changes:
    - Removed the functionality to shift-click a machine choice to set it as the default
    - Added an exception so that Klonan's Transport/Mining Drone pseudo-recipes won't show up in the recipe picker
    - Reworded the tooltip for the production percentage-column to be more correct
    - Added the mod name and description to the locale file, so it can be localised to other languages
  Bugfixes: