@@ -108,6 +108,12 @@ function model.update_floor(floor_data, aggregate)
         if desired_products[product.type][product.name] == nil then
             structures.aggregate.add(aggregate, "Ingredient", product)
             structures.aggregate.subtract(aggregate, "Product", product)
+        else
+            -- Add top level products that are also ingredients to the ingredients
+            local negative_amount = product.amount - desired_products[product.type][product.name]
+            if negative_amount > 0 then
+                structures.aggregate.add(aggregate, "Ingredient", product, negative_amount)
+            end
         end
     end
 end
