@@ -11,6 +11,7 @@ Date: 00. 00. 0000
     - Fixed how the mod detects which machines can produce certain recipes in the proper way
     - Fixed that setting hard limits on rocket silo recipes would not work correctly
     - Fixed that migration caused any subfactory that contained fuels to always need repair
+    - Fixed that desired products that are also ingredients didn't show up as such at the top level
 
 ---------------------------------------------------------------------------------------------------
 Version: 0.18.15
